small addition intro

--- a/note1.tex
+++ b/note1.tex
@@ -213,7 +213,7 @@ When in the right-hand branch of the proof an explicit contradiction is derived,
 
 The proof-format we propose solves this problem in a two-steps approach: firstly, by adding indices to judgements to keep track of stages in the construction of a proof; and secondly, by exploiting the fact that judgements that are `marked' at a certain stage do not have to be removed, because there is simply no need to prevent their implicit re-use since every assumption or premise should explicitly be written down in the place it is used. Instead, it is the derivation of the same judgement at a later stage that is (or may be) blocked, because the original assumption that led to its initial derivation probably no longer holds.
 
-Additionally, the system makes the connection between unconditional derivations of certain disjunctions in the paraconsistent logic and the conditional deductions of one of their disjuncts in the adaptive logic explicit by adopting multiple-conclusion judgements. This formal feature has the additional advantage that it allows us to re-assess certain current debates on how one should best approach the question of \textit{classical recapture} in paraconsistent logics. The problem can be summarised as follows. When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic, this question is often deemed urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provides a general framework in which many types of defeasible inference-forms can be rigorously formalised.
+We therefore provide, for the first time, an appropriate Natural Deduction translation of adaptive reasoning, whose proofs have been so far always been presented in their linear format. But the system has the additional task of making explicit the connection between unconditional derivations of certain disjunctions in the paraconsistent logic and the conditional deductions of one of their disjuncts in the adaptive logic: it does so by adopting multiple-conclusion judgements. This formal feature has the additional advantage that it allows us to re-assess certain current debates on how one should best approach the question of \textit{classical recapture} in paraconsistent logics. The problem can be summarised as follows. When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic, this question is often deemed urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provides a general framework in which many types of defeasible inference-forms can be rigorously formalised.
 
 HERE 
 
