--- a/note1.tex
+++ b/note1.tex
@@ -311,35 +311,35 @@ The semantics of connectives is given in the standard proof-theoretical way by w
 %
 \begin{figure}[h!]
 \begin{mathpar}
-\infer*[right=$\rightarrow$I] {\Turn {\Gamma, \phi_1; \cdot} {\phi_2}} {\TurnNext {\Gamma; \cdot} {\phi_1\rightarrow \phi_2}}
+\infer*[right=$\rightarrow$I] {\Turn {\Gamma, \phi_1; \cdot} {\Delta, \phi_2}} {\TurnNext {\Gamma; \cdot} {\Delta, \phi_1\rightarrow \phi_2}}
 \and
-\infer*[right=$\rightarrow$E] {\Turn {\Gamma; \cdot} {\phi_1\rightarrow\phi_2}\\{\TurnPrime {\Gamma';\cdot} {\phi_1}}} {\TurnMaxPlusOne {\Gamma; \Gamma'} {  \phi_2}}
+\infer*[right=$\rightarrow$E] {\Turn {\Gamma; \cdot} {\Delta, \phi_1\rightarrow\phi_2}\\{\TurnPrime {\Gamma';\cdot} {\Delta', \phi_1}}} {\TurnMaxPlusOne {\Gamma; \Gamma'} {\Delta, \Delta', \phi_2}}
 \end{mathpar}
 
 \begin{mathpar}
-\infer*[right=$\wedge$I] {\Turn {\Gamma;\cdot} {\phi_1}\\{\TurnPrime {\Gamma'; \cdot} {\phi_2}}} {\TurnMaxPlusOne {\Gamma, \Gamma';\cdot} {\phi_1\wedge \phi_2}}
+\infer*[right=$\wedge$I] {\Turn {\Gamma;\cdot} {\Delta, \phi_1}\\{\TurnPrime {\Gamma'; \cdot} {\Delta', \phi_2}}} {\TurnMaxPlusOne {\Gamma, \Gamma';\cdot} {\Delta, \Delta', \phi_1\wedge \phi_2}}
 \and
 \infer*[right=$\wedge$E] 
-{\Turn {\Gamma;\cdot} {\phi_1\wedge\phi_2}} {\TurnNext {\Gamma;\cdot} {  \phi_{i \in \{1,2\}}}}
+{\Turn {\Gamma;\cdot} {\Delta, \phi_1\wedge\phi_2}} {\TurnNext {\Gamma;\cdot} {\Delta, \phi_{i \in \{1,2\}}}}
 \end{mathpar}
 
 
 \begin{mathpar}
-\infer*[right=$\vee$I] {\Turn {\Gamma;\cdot} {\phi_1}} {\TurnNext {\Gamma;\cdot} {\phi_1\vee \phi_2}}
+\infer*[right=$\vee$I] {\Turn {\Gamma;\cdot} {\Delta, \phi_1}} {\TurnNext {\Gamma;\cdot} {\Delta, \phi_1\vee \phi_2}}
 \and
-\infer*[right=$\vee$I] {\Turn {\Gamma;\cdot} {\phi_2}} {\TurnNext {\Gamma;\cdot} {\phi_1\vee \phi_2}}
+\infer*[right=$\vee$I] {\Turn {\Gamma;\cdot} {\Delta, \phi_2}} {\TurnNext {\Gamma;\cdot} {\Delta, \phi_1\vee \phi_2}}
 \and
 \infer*[right=$\vee$E] 
-{\Turn {\Gamma;\cdot} {\phi_1\vee\phi_2}}{\TurnNext {\Gamma;\cdot} {  \phi_{1},\phi_{2}}}
+{\Turn {\Gamma;\cdot} {\Delta, \phi_1\vee\phi_2}}{\TurnNext {\Gamma;\cdot} {\Delta, \phi_{1},\phi_{2}}}
 \end{mathpar}
 
 
 \begin{mathpar}
-\infer*[right=$\bot$E] {\Turn {\Gamma; \cdot}{\bot} }{\Turn {\Gamma;\cdot} {\phi}}
+\infer*[right=$\bot$E] {\Turn {\Gamma; \cdot}{\Delta, \bot} }{\Turn {\Gamma;\cdot} {\Delta, \phi}}
 %\end{mathpar}
 \and
 %\begin{mathpar}
-\infer*[right=$\neg$I] {\Turn {\Gamma; \phi}{\psi}}{\TurnNext {\Gamma; \cdot}{\psi, \neg \phi}}
+\infer*[right=$\neg$I] {\Turn {\Gamma; \phi}{\Delta, \psi}}{\TurnNext {\Gamma; \cdot}{\Delta, \psi, \neg \phi}}
 \end{mathpar}
 
 \caption{Rules for I/E of connectives}\label{fig:connectives}
@@ -347,21 +347,21 @@ The semantics of connectives is given in the standard proof-theoretical way by w
 
 \begin{figure}[h!]
 \begin{mathpar}
-\infer*[right=Wleft] {\Turn {\Gamma; \cdot} {\phi_{1}} } {\TurnNext {\Gamma, \phi_{2}; \cdot} {\phi_{1}}}
+\infer*[right=Wleft] {\Turn {\Gamma; \cdot} {\Delta, \phi_{1}} } {\TurnNext {\Gamma, \phi_{2}; \cdot} {\Delta, \phi_{1}}}
 \and
-\infer*[right=Cleft] {\Turn {\Gamma, \phi_{1}, \phi_{1}; \cdot} {\phi_{2}} } {\TurnNext {\Gamma, \phi_{1}; \cdot} {\phi_{2}}}
+\infer*[right=Cleft] {\Turn {\Gamma, \phi_{1}, \phi_{1}; \cdot} {\Delta, \phi_{2}} } {\TurnNext {\Gamma, \phi_{1}; \cdot} {\Delta, \phi_{2}}}
 \and
-\infer*[right=Eleft] {\Turn {\Gamma, \phi_{1}, \phi_{2}; \cdot} {\phi_{3}} } {\TurnNext {\Gamma, \phi_{2}, \phi_{1}; \cdot} {\phi_{3}}}
+\infer*[right=Eleft] {\Turn {\Gamma, \phi_{1}, \phi_{2}; \cdot} {\Delta, \phi_{3}} } {\TurnNext {\Gamma, \phi_{2}, \phi_{1}; \cdot} {\Delta, \phi_{3}}}
 \end{mathpar}
 \begin{mathpar}
 
-\infer*[right=Cut] {\Turn {\Gamma; \cdot} {\phi_{1}} \\ {\TurnPrime {\Gamma', \phi_{1}; \cdot} {\phi_{2}}}} {\TurnMaxPlusOne {\Gamma; \Gamma'; \cdot} {\phi_{2}}}
+\infer*[right=Cut] {\Turn {\Gamma; \cdot} {\Delta, \phi_{1}} \\ {\TurnPrime {\Gamma', \phi_{1}; \cdot} {\Delta', \phi_{2}}}} {\TurnMaxPlusOne {\Gamma; \Gamma'; \cdot} {\Delta, \Delta', \phi_{2}}}
 \end{mathpar}
 \begin{mathpar}
 
-\infer*[right=Cright] {\Turn {\Gamma; \cdot} {\phi, \phi}} {\TurnNext {\Gamma; \cdot} {\phi} }
+\infer*[right=Cright] {\Turn {\Gamma; \cdot} {\Delta, \phi, \phi}} {\TurnNext {\Gamma; \cdot} {\Delta, \phi} }
 \and
-\infer*[right=Eright] {\Turn {\Gamma; \cdot} {\phi_{1}, \phi_{2}} } {\TurnNext {\Gamma; \cdot} {\phi_{2}, \phi_{1}}}
+\infer*[right=Eright] {\Turn {\Gamma; \cdot} {\Delta, \phi_{1}, \phi_{2}} } {\TurnNext {\Gamma; \cdot} {\Delta, \phi_{2}, \phi_{1}}}
 \end{mathpar}
 \caption{Structural Rules}\label{fig:structural}
 \end{figure}
@@ -444,13 +444,13 @@ The language of {\sf AdaptiveND} is as follows:
 
 
 \begin{definition}[Judgements]
-An {\sf AdaptiveND}-judgement is of the form $\Gamma; \phi^{-}\vdash_{s} \Delta$, where: 
+An {\sf AdaptiveND}-judgement is of the form $\Gamma; \Theta^{-}\vdash_{s} \Delta$, where: 
 
 \begin{enumerate}
 \item the left-hand side of $\vdash_{\sf s}$ has $\Gamma$ as in {\sf minimalND};
 \item the semicolon sign on the left-hand side of $\vdash_{\sf s}$ is conjunctive;
-\item $\phi$ refers to a formula in $\Omega$, i.e. with a specific inconsistent logical form; below we introduce an appropriate $\Omega$-formation rule;\footnote{As mentioned above, the current setting of {\sf AdaptiveND} is specified for an inconsistency-adaptive logic.}
-\item the last place of the left-hand side context is always reserved to negated formulas of the $\Omega$ form; we shall use $\phi^{-}$ to refer to the negation of $\phi$, for all $\phi\in \Omega$; {\color{red}need to account for sets of conditions}
+\item $\Theta$ refers to a finite subset of $\Omega$, i.e. a set of formulas of a specific inconsistent logical form; we write $\phi$ instead of $\{\phi\}$ when $\Theta$ is the singleton $\{\phi\}$; below we introduce an appropriate $\Omega$-formation rule;\footnote{As mentioned above, the current setting of {\sf AdaptiveND} is specified for an inconsistency-adaptive logic.}
+\item the last place of the left-hand side context is always reserved to negated formulas of type $\Omega$; we shall use $\phi^{-}$ to refer to the negation of $\phi$, and $\Theta^-$ for $\{\phi^- \mid \phi \in \Theta\}$;
 \item the right-hand side is in disjunctive form.
 \end{enumerate}
 \end{definition}
@@ -476,25 +476,59 @@ We now introduce the rules for {\sf AdaptiveND}. In Figure \ref{fig:omega}, we d
 %{\TurnNextNext {\Gamma; \cdot} {{\sf \Omega}}} 
 \and
 \infer*[right=Adaptive Condition-formation] {{\Turn {\Gamma;\cdot} {\sf wf} } \\ {\phi \in {\sf \Omega}}} {\TurnNext {\Gamma ; \phi^{-}} {\sf wf}}
+\and
+\infer*[right=Adaptive Condition-extension] {{\Turn {\Gamma;\Theta^-} {\sf wf} } \\ {\phi \in {\sf \Omega}}} {\TurnNext {\Gamma ; \Theta^-, \phi^{-}} {\sf wf}}
 \end{mathpar}
 \caption{$\Omega$ Formation rules}\label{fig:omega}
 \end{figure}
 
 
-Next, the calculus is extended by introducing two rules, see Figure \ref{fig:adaptiverules}. $RU$ is called the unconditional rule: it says that if a formula $\phi_{1}$ is derivable in {\sf AdaptiveND}, and another formula $\phi_{2}$ is derivable from $\phi_{1}$ without additional assumptions or adaptive conditions, then $\phi_{2}$ is derivable from $\phi_{1}$ and the context $\Gamma;\phi^{-}\vdash$ in which the latter holds.  $RC$ is  called the conditional rule: it says that if a disjunction $\psi,\phi$ is derivable from $\Gamma$, with $\phi$ an abnormal formula, then $\psi$ can also be derived alone under $\Gamma$ and the Adaptive Condition that $\phi$ be false.
+Next, the calculus is extended by introducing the conditional rule $RC$ (Figure \ref{fig:adaptiverules}), which states that if a disjunction $\psi,\phi$ is derivable from $\Gamma$, with $\phi$ an abnormal formula, then $\psi$ can also be derived alone under $\Gamma$ and the Adaptive Condition that $\phi$ be false. Because the application of $RC$ can be delayed by keeping formulae of type $\Omega$ on the right hand-side of the turnstile, the role of the unconditional rules of the standard calculus is subsumed under the usual cut-rule. The single and multi-premise versions of the unconditional rules displayed in Figure \ref{fig:adaptiverules2} can thus be treated as derived rules.
+
+% two rules, see Figure \ref{fig:adaptiverules}. $RU$ is called the unconditional rule: it says that if a formula $\phi_{1}$ is derivable in {\sf AdaptiveND}, and another formula $\phi_{2}$ is derivable from $\phi_{1}$ without additional assumptions or adaptive conditions, then $\phi_{2}$ is derivable from $\phi_{1}$ and the context $\Gamma;\phi^{-}\vdash$ in which the latter holds.  $RC$ is  called the conditional rule: it says that if a disjunction $\psi,\phi$ is derivable from $\Gamma$, with $\phi$ an abnormal formula, then $\psi$ can also be derived alone under $\Gamma$ and the Adaptive Condition that $\phi$ be false.
+
+\begin{figure}[h!]
+\begin{mathpar}
+\infer*[right=RC] {\Turn {\Gamma;\cdot} {\psi,\phi}\\ {\phi \in \Omega}} {\TurnNext {\Gamma; \phi^{-}} {\psi}}
+\end{mathpar}
+
+\caption{Conditional Rule}\label{fig:adaptiverules}
+\end{figure}
 
 \begin{figure}[h!]
 \begin{mathpar}
 \infer*[right=RU] {\Turn {\Gamma; \phi^{-}} {\phi_{1}}\\ {\TurnNext {\phi_{1};\cdot} {\phi_{2}}}}
 {\TurnNextNext {\Gamma, \phi_{1}; \phi^{-}} {\phi_{2}}}
 \and
-\infer*[right=RC] {\Turn {\Gamma;\cdot} {\psi,\phi}\\ {\phi \in \Omega}} {\TurnNext {\Gamma; \phi^{-}} {\psi}}
+\infer*[right=RU2] {\Turn {\Gamma; \phi^-} {\phi_{1}}\\ {\TurnNext {\Gamma';\phi'^-} {\phi_2}} \\ {\TurnNextNext {\phi_1, \phi_2;\cdot} {\phi_3}}}
+{\TurnNextNextNext {\Gamma, \Gamma'; (\phi\cup\phi')^-} {\phi_{3}}}
 \end{mathpar}
 
-\caption{Adaptive Rules}\label{fig:adaptiverules}
+\caption{Unconditional Rules}\label{fig:adaptiverules2}
 \end{figure}
 
+\begin{figure}
+    \begin{mathpar}
+        \infer*[right=RC]{
+                        \infer*[right=Cut]{\Turn {\Gamma; \cdot} {\phi_{1}, \phi}\\ {\TurnNext {\phi_{1};\cdot} {\phi_{2}}}}
+                        {\TurnNextNext {\Gamma, \phi_{1}; \cdot} {\phi_{2}, \phi}}
+                        }
+                         {\TurnNextNextNext {\Gamma, \phi_1; \phi^-}{\phi_2}}
+        
+        \and
 
+        \infer*[right=Cut]
+            {\infer*[right=Cut]
+            {\Turn {\Gamma; \cdot} {\phi_{1}, \phi}\\ {\TurnNext {\Gamma';\cdot} {\phi_2, \phi'}} \\ {\TurnNextNext {\phi_1, \phi_2;\cdot} {\phi_3}}}
+            {\Turn {\Gamma; \cdot} {\phi_{1}, \phi}\\ {\TurnNext {\Gamma', \phi_1 ;\cdot} {\phi_3, \phi'}}}}
+            {\infer*[right=RC]
+            {\infer*[right=RC]
+                {\Turn {\Gamma, \Gamma'; \cdot} {\phi_{3}, \phi, \phi'}}
+                {\TurnNext {\Gamma, \Gamma'; \phi^-} {\phi_{3}, \phi'}}}
+            {\TurnNext {\Gamma, \Gamma'; (\phi\cup\phi')^-} {\phi_{3}}}}
+    \end{mathpar}
+    \caption{Derivation of conditional rules}
+\end{figure}
  
 The Adaptive strategy developed in the next Section has the aim of establishing which abnormal formulas can no longer be safely considered as conclusions of an {\sf Adaptive Condition Formation} Rule, thereby requiring a retraction of the formulas that are derivable from it. To this aim, it is essential to establish minimal disjunctions of such formulas, denoted by $\bigvee(\Delta^{min})$, with $\Delta\in \Omega$. The rule in Figure \ref{fig:mindab} establishes the construction of such minimal disjunctions. It says that given a derivable disjunctive formula of the $\Omega$ type at some stage {\sf s} of a derivation, that can be considered minimal at stage {\sf s'} if at no previous stage {\sf t} $<$ {\sf s'} a shorter one can be derived in the same context $\Gamma$.
 
