Fixed typo in proof on p2

--- a/note1.tex
+++ b/note1.tex
@@ -189,7 +189,7 @@ The dynamics of retracting earlier lines in a proof can be captured in a rather 
         (2) & $p \vee q$ & Addition & $\emptyset$\\
         (3) & $\neg p$ & Prem & $\emptyset$\\
         (4) & $q$ & DS & $\{p\}$ & \checkmark$^5$\\
-        (5) & $p \wedge \neg q$ & Adjunction & $\emptyset$
+        (5) & $p \wedge \neg p$ & Adjunction & $\emptyset$
     \end{tabular}
 \end{figure}
 \noindent Here, at line (4) disjunctive syllogism (DS) is applied on the condition that $p$ behaves normally, i.e.\ that the contradiction $p \wedge \neg p$ hasn't been derived. When this contradiction is effectively derived at line (5), the line (4) is marked and is from then on no longer assumed to be part of the proof. This type of reasoning is the common core of how the idea of provisional applications of classical inference-rules can be applied to paraconsistent logics that reject the disjunctive syllogism, but in which the restricted form $\phi \vee \psi, \neg \phi / \psi \vee (\phi \wedge \neg \phi)$ is retained.
